# BDC

./: .editorconfig  .gitignore  BDC.cabal  ChangeLog.md  LICENSE  Makefile  README.md  cabal.project  flake.nix  stack.yaml
.github/workflows/: cd.yaml  ci.yaml
data/: 1.txt  l1
lib/: BDC.hs
lib/BDC/: DataLoader.hs  Logic.hs  Types.hs  Util.hs
src/: DataLoader.hs  Main.hs  Message.hs  Parser.hs  Words.hs
