cabal-version:       2.4
name:                BDC
version:             0.0.0.8
-- synopsis:
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Lei Zhu
maintainer:          julytreee@gmail.com
-- copyright:
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md

library
  exposed-modules: BDC.Types, BDC.Logic, BDC.DataLoader, BDC, BDC.Util
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <5
                     , text >=2.0
                     , time
                     , transformers
                     , data-default
                     , ansi-terminal
                     , random-shuffle
  hs-source-dirs:      lib
  ghc-options: -Wall -Wno-name-shadowing
  default-language:    GHC2021

executable BDC
  main-is:             Main.hs
  other-modules: Parser
  -- other-extensions:
  build-depends:       base >=4.7 && <5, text, BDC, optparse-applicative
  hs-source-dirs:      src
  ghc-options: -Wall -Wno-name-shadowing
  default-language:    GHC2021
